name:              azulit
version:           0.1.0.0
cabal-version:     >=1.18
build-type:        Simple

flag dev
    description:   Turn on development settings, like auto-reload templates.
    default:       False

flag library-only
    description:   Build for use with "yesod devel"
    default:       False

library
  hs-source-dirs:           lib
  default-language:         Haskell2010
  if flag(dev)            { cpp-options: -DDEVELOPMENT
                            ghc-options: -Wall -fwarn-tabs -O0 }
  else                    { ghc-options: -Wall -fwarn-tabs -O2 }

  default-extensions:       TemplateHaskell
                            QuasiQuotes
                            OverloadedStrings
                            NoImplicitPrelude
                            CPP
                            MultiParamTypeClasses
                            TypeFamilies
                            GADTs
                            GeneralizedNewtypeDeriving
                            FlexibleContexts
                            EmptyDataDecls
                            NoMonomorphismRestriction
                            DeriveDataTypeable
                            ViewPatterns
                            TupleSections
                            RecordWildCards

  build-depends:            aeson
                          , base ==4.*
                          , bytestring
                          , classy-prelude
                          , classy-prelude-conduit
                          , classy-prelude-yesod
                          , conduit
                          , containers
                          , data-default
                          , directory
                          , fast-logger
                          , file-embed
                          , hjsmin
                          , http-conduit
                          , monad-control
                          , monad-logger
                          , persistent
                          , persistent-sqlite
                          , persistent-template
                          , safe
                          , shakespeare
                          , template-haskell
                          , text
                          , time
                          , unordered-containers
                          , vector
                          , wai-extra
                          , wai-logger
                          , warp
                          , yaml
                          , yesod ==1.4.*
                          , yesod-auth
                          , yesod-core
                          , yesod-form
                          , yesod-static
  exposed-modules:          Application
                            Foundation
                            Handler.Common
                            Handler.Root
                            Import
                            Import.NoFoundation
                            Model
                            Settings
                            Settings.StaticFiles
      

executable azulit
  hs-source-dirs:           src
  main-is:                  main.hs
  default-language:         Haskell2010
  ghc-options:              -threaded -O2 -rtsopts -with-rtsopts=-N
  if flag(library-only)   { buildable: False }
  build-depends:            azulit  
                          , base
test-suite test
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test
  ghc-options:          -Wall
  default-language:     Haskell2010
  default-extensions:   TemplateHaskell
                        QuasiQuotes
                        OverloadedStrings
                        NoImplicitPrelude
                        CPP
                        MultiParamTypeClasses
                        TypeFamilies
                        GADTs
                        GeneralizedNewtypeDeriving
                        FlexibleContexts
                        EmptyDataDecls
                        NoMonomorphismRestriction
                        DeriveDataTypeable
                        ViewPatterns
                        TupleSections
  build-depends:        azulit                                         
                      , base
                      , classy-prelude
                      , classy-prelude-yesod
                      , hspec >=2.0.0
                      , monad-logger
                      , persistent
                      , persistent-sqlite
                      , resourcet
                      , shakespeare
                      , transformers
                      , yesod
                      , yesod-core
                      , yesod-test >=1.4.3
      
